external-crates/move/crates/move-compiler/tests/move_check/parser/struct_native_missing_semicolon.move
module 0x42::M {
    native struct S // ;
}
